--- a/src/html/index.html
+++ b/src/html/index.html
@@ -114,7 +114,7 @@
 
             <div class="top-navRight pull-right col-md-6">
                 <div class="topNav_orders pull-left">
-                    <a class="topMenuCar_link" href="javascript">
+                    <a class="topMenuCar_link" href="http://127.0.0.1:8080/iqiyi.com/src/html/shopcar.html">
                         <span class="iconfont icon-gouwuchekong"></span>
                         <span class="topR_txt">购物车<i  data-elem="cartnum" class="orange">0</i>件</span>
                     </a>
