--- a/src/html/product.html
+++ b/src/html/product.html
@@ -23,8 +23,90 @@
             <div class="top-navLeft pull-left col-md-6">
                 <span class="pull-left welcome">欢迎来到爱奇艺商城</span>
                 <div class="loginmenu pull-left center-block">
-                    <a href="javascript" class="login">请登录</a>
-                    <a href="javascript" class="reg">免费注册</a>
+                    <a href="" class="login " data-toggle="modal" data-target="#myModal">请登录</a>
+                    <a href="" class="reg" data-toggle="modal" data-target="#myModal">免费注册</a>
+                </div>
+            </div>
+
+
+
+
+            <!-- Modal -->
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"></span></button>
+
+                        <!-- 注册选项卡开始 -->
+
+                        <div class="reg-part  hide show">
+                            <div class="modal-header">
+                                <h4 class="modal-title" id="myModalLabel">
+                                    <span class="title-dot"></span> 使用手机注册
+                                </h4>
+                            </div>
+                            <div class="modal-body">
+                                <p class="sub-title">注册过程中会用到短信，请准备好您的手机</p>
+                                <div class="info-container">
+                                    <div class="form-group">
+                                        <label for="phone">手机</label>
+                                        <input type="text" id="phone" name="phone">
+                                        <p class="p1"></p>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="password">密码</label>
+                                        <input type="password" id="password" name="password">
+                                        <p class="p2"></p>
+                                    </div>
+                                </div>
+
+                                <a href="" class="btn-green btn-reg btn-gray">注册</a>
+                                <p class="protocol-con">登录即代表您同意<a href="" target="_blank" class="protocol-link">用户协议</a>和<a href="" target="_blank" class="protocol-link">隐私政策</a>
+                                </p>
+                            </div>
+
+                        </div>
+
+                        <!-- 注册选项卡结束 -->
+
+                        <!-- 登录选项卡开始 -->
+
+                        <div class="log-part hide">
+                            <div class="modal-header">
+                                <h4 class="modal-title" id="myModalLabel">
+                                    <span class="title-dot"></span> 使用手机登录
+                                </h4>
+                            </div>
+                            <div class="modal-body">
+                                <p class="sub-title">登录过程中会用到短信，请准备好您的手机</p>
+                                <div class="info-container">
+                                    <div class="form-group">
+                                        <label for="phone">手机</label>
+                                        <input type="text" id="log-phone" name="phone">
+                                        <p class="p1 log-p1"></p>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="password">密码</label>
+                                        <input type="password" id="log-password" name="password">
+                                        <p class="p2 log-p2"></p>
+                                    </div>
+                                </div>
+
+                                <a href="javascript:;" class="btn-green btn-login btn-gray">登录</a>
+                                <p class="protocol-con">登录即代表您同意<a href="" target="_blank" class="protocol-link">用户协议</a>和<a href="" target="_blank" class="protocol-link">隐私政策</a>
+                                </p>
+                            </div>
+
+                        </div>
+
+                        <!-- 登录选项卡结束 -->
+
+                        <div class="modal-footer">
+                            <a class="reg-link">注册</a>
+                            <a class="login-link">登录</a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
@@ -32,7 +114,7 @@
 
             <div class="top-navRight pull-right col-md-6">
                 <div class="topNav_orders pull-left">
-                    <a class="topMenuCar_link" href="javascript">
+                    <a class="topMenuCar_link" href="http://127.0.0.1:8080/iqiyi.com/src/html/shopcar.html">
                         <span class="iconfont icon-gouwuchekong"></span>
                         <span class="topR_txt">购物车<i  data-elem="cartnum" class="orange">0</i>件</span>
                     </a>
@@ -210,7 +292,7 @@
                 <a class="toolbar_link" target="_blank"></a>
             </li>
             <li class="item_car">
-                <a class="toolbar_car" href="">
+                <a class="toolbar_car" href="http://127.0.0.1:8080/iqiyi.com/src/html/shopcar.html">
                     <i class="icon-shopping-cart"></i>
                     <span class="toolbar_carInfo">购物车</span>
                     <span class="toolbar_nub">0</span>
