--- a/src/html/index.html
+++ b/src/html/index.html
@@ -60,7 +60,7 @@
                                     </div>
                                 </div>
 
-                                <a href="" class="btn-green btn-reg btn-gray">注册</a>
+                                <a href="javascript:;" class="btn-green btn-reg btn-gray">注册</a>
                                 <p class="protocol-con">登录即代表您同意<a href="" target="_blank" class="protocol-link">用户协议</a>和<a href="" target="_blank" class="protocol-link">隐私政策</a>
                                 </p>
                             </div>
