--- a/src/html/product.html
+++ b/src/html/product.html
@@ -155,7 +155,7 @@
                     </a>
                 </div>
                 <div class="top_cutline pull-left">
-                    <a class="index_link text-center" href="javascript">
+                    <a class="index_link text-center" href="http://127.0.0.1:8080/iqiyi.com/src/html/index.html">
                         <span class="topR_txt">爱奇艺首页</span>
                     </a>
                 </div>
@@ -173,7 +173,7 @@
             <!-- logo开始 -->
 
             <div class="head_logo pull-left">
-                <a href="">
+                <a href="http://127.0.0.1:8080/iqiyi.com/src/html/index.html">
                     <img src="../img/logo1126.png" alt="" title="爱奇艺商城">
                 </a>
             </div>
