--- a/src/html/shopcar.html
+++ b/src/html/shopcar.html
@@ -112,7 +112,7 @@
 
             <div class="top-navRight pull-right col-md-8">
                 <div class="top_cutline pull-right">
-                    <a class="index_link text-center" href="javascript">
+                    <a class="index_link text-center" href="http://127.0.0.1:8080/iqiyi.com/src/html/index.html">
                         <span class="topR_txt">爱奇艺首页</span>
                     </a>
                 </div>
@@ -178,7 +178,7 @@
             <!-- logo开始 -->
 
             <div class="head_logo pull-left">
-                <a href="">
+                <a href="http://127.0.0.1:8080/iqiyi.com/src/html/index.html">
                     <img src="../img/logo1126.png" alt="" title="爱奇艺商城">
                 </a>
             </div>
@@ -224,7 +224,7 @@
 
                 <div class="title">
                     <ul class="title-box">
-                        <li class="check">
+                        <li class="allcheck">
                             <input type="checkbox"> 全选
                         </li>
                         <li class="detail">
@@ -252,7 +252,7 @@
 
                 <div class="car-end">
                     <ul class="end-box">
-                        <li class="check">
+                        <li class="allcheck">
                             <input type="checkbox"> 全选
                         </li>
                         <li class="del">
@@ -271,10 +271,10 @@
                         </li>
 
                         <li class="money">
-                            合计（不含运费）：<span>¥<em>49.9</em></span>
+                            合计（不含运费）：<span>¥<em class="allCheckedPrice">0</em></span>
                         </li>
                         <li class="num">
-                            已选商品<em>5</em>件
+                            已选商品<em class="checkednum">0</em>件
                         </li>
                     </ul>
                 </div>
